--- a/rails/ham-mc/app/views/layouts/application.html.erb
+++ b/rails/ham-mc/app/views/layouts/application.html.erb
@@ -23,7 +23,8 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="/">Home</a></li>
+        <%= menu_item 'Home', '/' %>
+        <%= menu_item 'Transmissions admin', transmissions_path %>
       </ul>
     </div>
   </div>
