--- a/rails/ham-mc/app/views/transmissions/index.html.erb
+++ b/rails/ham-mc/app/views/transmissions/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Transmissions</h1>
 
-<table>
+<table class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>Altitude</th>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Transmission', new_transmission_path %>
+<%= link_to 'New Transmission', new_transmission_path, class: 'btn btn-primary' %>
