--- a/rails/ham-mc/app/views/static/home.html.erb
+++ b/rails/ham-mc/app/views/static/home.html.erb
@@ -2,3 +2,6 @@
 <p>
   The current time is <%= @date.to_s :long %>
 </p>
+
+<button id="createRandom" class="btn btn-lg btn-primary">Create Random Transmission</button>
+<p id="feedback"></p>
