--- a/rails/ham-mc/app/views/static/home.html.erb
+++ b/rails/ham-mc/app/views/static/home.html.erb
@@ -40,5 +40,7 @@
 </div>
 
 
-<button id="createRandom" class="btn btn-lg btn-primary pull-right">Create Random Transmission</button>
-<p id="feedback"></p>
+<div class="text-center">
+  <button id="createRandom" class="btn btn-lg btn-primary">Create Random Transmission</button>
+  <p id="feedback"></p>
+</div>
